changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: expose maps to report interfaces.
Nicolas Weeger 2010-04-17

CRE: keep map level while we're at it.
Nicolas Weeger 2010-04-17

CRE: expand maps node if only maps, resize columns to meaningful size.
Nicolas Weeger 2010-04-17

CRE: display an empty panel by default, to force a decent size.
Nicolas Weeger 2010-04-17

CRE: display item property in treasure panel.
Nicolas Weeger 2010-04-16

CRE: report definition is now managed like filters.
Add quick item filter.
Nicolas Weeger 2010-04-16

CRE: wrap object name and experience.
Nicolas Weeger 2010-04-16

CRE: change disposition for resource window.
Nicolas Weeger 2010-04-15

CRE: display region information when one is selected.
Nicolas Weeger 2010-04-15

CRE: experience display.
Nicolas Weeger 2010-04-15

CRE: load data in the thread, no need to freeze everything.
Nicolas Weeger 2010-04-14

CRE: display map name, and exits to and from.
Nicolas Weeger 2010-04-14

CRE improvements. Keep region information for maps.
Display map list by region, with map experience.
Nicolas Weeger 2010-04-14

Fix for bug 2985631 - can not create a new character if you have a long
account password.  Simple solution is to just truncat password.
MSW 2010-04-11

Add some minimal new character support.  Work in progress, but added code
that at least hands off the username/password to server.
---
doc/Developers/protocol: Add some docs on createplayer protocol command.
include/sockproto.h, include/sproto.h: Update with new functions.
server/login.c: Add code to update account for new characters.