@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: button to copy report contents to clipboard.
+Nicolas Weeger 2010-04-17
+
 CRE: expose maps to report interfaces.
 Nicolas Weeger 2010-04-17
 
